--- a/game/static/css/game.css
+++ b/game/static/css/game.css
@@ -1,39 +1,57 @@
 .ac-game-menu {
-    width: 100%;
-    height: 100%;
-    background-image: url("/static/image/menu/background.gif");
-    background-size: 100% 100%;
-    user-select: none;
-} 
+  width: 100%;
+  height: 100%;
+  background-image: url("/static/image/menu/background.gif");
+  background-size: 100% 100%;
+  user-select: none;
+}
 
 .ac-game-menu-field {
-    width: 20vw;
-    position: relative;
-    top:40vh;
-    left: 19vh;
+  width: 20vw;
+  position: relative;
+  top: 40vh;
+  left: 19vh;
 }
 
 .ac-game-menu-field-item {
-    color: white;
-    height: 7vh;
-    width: 18vw;
-    font-size: 6vh;
-    font-style: italic;
-    padding: 2vh;
-    text-align: center;
-    background-color: rgba(39,21,28,0.6);
-    border-radius: 10px;
-    letter-spacing: 0.5vw;
-    cursor: pointer;
+  color: white;
+  height: 7vh;
+  width: 18vw;
+  font-size: 6vh;
+  font-style: italic;
+  padding: 2vh;
+  text-align: center;
+  background-color: rgba(39, 21, 28, 0.6);
+  border-radius: 10px;
+  letter-spacing: 0.5vw;
+  cursor: pointer;
 }
 
 .ac-game-menu-field-item:hover {
-    transform: scale(1.2);
-    transition: 100ms;
+  transform: scale(1.2);
+  transition: 100ms;
 }
 
 .ac-game-playground {
-    width: 100%;
-    height: 100%;
-    user-select: none;
+  width: 100%;
+  height: 100%;
+  user-select: none;
+}
+
+.ac-game-settings {
+  width: 100%;
+  height: 100%;
+  background-image: url("/static/image/menu/background.gif");
+  background-size: 100% 100%;
+  user-select: none;
+}
+
+.ac-game-settings-login {
+  width: 20vw;
+  height: 41vh;
+  position: relative;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+  background-color: rgba(0, 0, 0, 0.7);
 }
