--- a/game/static/css/game.css
+++ b/game/static/css/game.css
@@ -11,10 +11,10 @@
   position: relative;
   top: 40vh;
   left: 19vh;
-    width: 20vw;
-    position: relative;
-    top: 30%;
-    left: 20%;
+  width: 20vw;
+  position: relative;
+  top: 30%;
+  left: 20%;
 }
 
 .ac-game-menu-field-item {
@@ -29,17 +29,17 @@
   border-radius: 10px;
   letter-spacing: 0.5vw;
   cursor: pointer;
-    color: white;
-    height: 7vh;
-    width: 18vw;
-    font-size: 6vh;
-    font-style: italic;
-    padding: 2vh;
-    text-align: center;
-    background-color: rgba(39, 21, 28, 0.6);
-    border-radius: 10px;
-    letter-spacing: 0.5vw;
-    cursor: pointer;
+  color: white;
+  height: 7vh;
+  width: 18vw;
+  font-size: 6vh;
+  font-style: italic;
+  padding: 2vh;
+  text-align: center;
+  background-color: rgba(39, 21, 28, 0.6);
+  border-radius: 10px;
+  letter-spacing: 0.5vw;
+  cursor: pointer;
 }
 
 .ac-game-menu-field-item:hover {
@@ -67,8 +67,97 @@
   position: relative;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+}
+
+.ac-game-settings-title {
+  color: white;
+  font-size: 3vh;
+  text-align: center;
+  padding-top: 2vh;
+  margin-bottom: 2vh;
+}
+
+.ac-game-settings-username {
+  display: block;
+  height: 7vh;
+}
+
+.ac-game-settings-password {
+  display: block;
+  height: 7vh;
+}
+
+.ac-game-settings-submit {
+  display: block;
+  height: 7vh;
+}
+
+.ac-game-settings-item {
+  width: 100%;
+  height: 100%;
+}
+
+.ac-game-settings-item>input {
+  width: 90%;
+  line-height: 3vh;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.ac-game-settings-item>button {
+  color: white;
+  width: 90%;
+  line-height: 3vh;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #4CAF50;
+  border-radius: 5px;
+  cursor:pointer;
+}
+
+.ac-game-settings-error-messages {
+  color: red;
+  font-size: 1.2vh;
+  display: inline;
+  float: left;
+  padding-left: 1vw;
+}
+
+.ac-game-settings-option {
+  color: white;
+  font-size: 2vh;
+  display: inline;
+  float: right;
+  padding-right: 1vw;
+  cursor: pointer;
+}
+
+.ac-game-settings-acwing {
+  display: block;
+  height: 7vh;
+}
+
+.ac-game-settings-acwing>img {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  display: block;
+}
+
+.ac-game-settings-acwing>div {
+  color: white;
+  font-size: 1.5vh;
+  text-align: center;
+  display: block;
 }
 
 .ac-game-settings-register {
@@ -77,6 +166,6 @@
   position: relative;
   left: 50%;
   top: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   background-color: rgba(0, 0, 0, 0.7);
 }
